<resources>
    <string name="app_name">Wowrack Customer App</string>
    <string name="wowrack_logo">Wowrack Logo</string>
    <string name="login">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="hotspot">Hotspot</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="help_activity">Help Activity</string>
    <string name="type_a_message">Type a message</string>
    <string name="wowrack_customer_service">Wowrack Customer Service</string>
    <string name="this_is_a_custom_toast">This is a custom Toast</string>

    <!--    command  -->
    <string-array name="data_command">
        <item>Test 1</item>
        <item>Test 2</item>
        <item>Test 3</item>
        <item>Hubungi Cs</item>
        <item>Test 1</item>
        <item>Test 2</item>
        <item>Test 3</item>
        <item>Test 1</item>
        <item>Test 2</item>
        <item>Test 3</item>
    </string-array>
    <string name="title_activity_hotspot">HotspotActivity</string>
    <string name="name">Name</string>
    <string name="name_value">Alexander Peter</string>
    <string name="address">Address</string>
    <string name="address_value">Jl. Pahlawan no 47 Saranjana</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_value">+01 44332345554</string>
    <string name="change_data">want to change data?</string>
    <string name="contact_cs">Contact CS</string>

    <!--    Home Fragment-->
    <string name="appbar_home">Home</string>
    <string name="home_hotspot">Hotspot</string>
    <string name="product">Products</string>
    <string name="traffic">Traffic Usage</string>
    <string name="half_rack">Half Rack</string>
    <string name="price_service">Rp. 1.350.000</string>
    <string name="current_month">/ bulan ini</string>
    <string name="see_detail">Lihat Detail</string>
    <string name="articles">Articles</string>
    <string name="first_name">Wowrack Luncurkan Transformasi Layananan Cloud Service </string>
    <string name="second_name">Singapore Huawei Clou…</string>
    <string name="third_name">Wowrack kenalkan Clo…</string>
    <string name="first_description">Hadir dengan logo baru, Cloud Raya version 2.0 memperkenalkan RAYA. Cloud Raya merupakan brand layanan…</string>
    <string name="second_description">Huawei telah lama dikenal sebagai perusahaan produsen alat komunikasi…</string>
    <string name="third_description">Pada era digitalisasi seperti saat ini, kemajuan teknologi mengalami perkembangan yang cukup pesat</string>
    <string name="home_location">Location Name</string>
    <string name="traffic_usage_date">15 Aug 2023 :</string>
    <string name="amount_data">300GB</string>
    <string name="see_all">See All</string>
    <string name="silver_package">Silver Package</string>
    <string name="signal">Up to 30 Mbps</string>
    <string name="service_date">Service Date :</string>
    <string name="detail_service_traffic_date">15 September 2023</string>
    <string name="location_traffic">Location :</string>
    <string name="traffic_address">Dharmanusada Indah VI no.100, Surabaya</string>

    <string-array name="data_name">
        <item>Wowrack Luncurkan Transformasi Layanan Cloud Service</item>
        <!--        <item>Wowrack Luncurkan Transformasi Layana…</item>-->
        <item>Singapore Huawei Clo…</item>
        <item>Wowrack kenalkan…</item>
    </string-array>

    <string-array name="data_description">
        <item>Hadir dengan logo baru, Cloud Raya version 2.0 memperkenalkan RAYA. Cloud Raya merupakan brand layanan…</item>
        <item>Huawei telah lama dikenal sebagai perusahaan produsen alat komunikasi…</item>
        <item>Pada era digitalisasi seperti saat ini, kemajuan teknologi mengalami perkembangan yuang cukup pesat</item>
    </string-array>

    <!--    Data photo-->
    <integer-array name="data_photo">
        <item>@drawable/cloudraya</item>
        <item>@drawable/photo_articel2</item>
        <item>@drawable/people_article</item>
    </integer-array>

    <!--  Profile Screen  -->
    <string name="my_account_title">My Account</string>
    <string name="biometric_login_button">Biometric Login Button</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="click_me">Click me</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>
    <string name="type_your_otp">Type your OTP</string>
    <string name="check_your_email_for_otp">Check your email for OTP</string>
    <string name="news_articles">News Articles</string>
    <string name="timer">Timer</string>

    <!--  Service Data  -->
    <string-array name="service_name">
        <item>Silver Package</item>
        <item>Silver Package</item>
    </string-array>

    <string-array name="service_specs">
        <item>Up to 30Mbps</item>
        <item>Up to 30Mbps</item>
    </string-array>

    <string-array name="service_date">
        <item>Service Date : 15 September 2023</item>
        <item>Service Date : 15 September 2023</item>
    </string-array>

    <string-array name="service_location">
        <item>Location : Dharmanusada Indah VI no.100, Surabaya</item>
        <item>Location : Dharmanusada Indah VI no.100, Surabaya</item>
    </string-array>

    <!--  Invoice data  -->
    <string-array name="invoice_data">
        <item>1 sep 2023 INV-12345 IDR 399.000</item>
        <item>1 sep 2023 INV-12345 IDR 399.000</item>
    </string-array>

    <!--  Modify Package Data  -->
    <string-array name="item_package">
        <item>Gold Package</item>
        <item>Diamond Package</item>
    </string-array>

    <string-array name="item_specs">
        <item>Up to 50Mbps</item>
        <item>Up to 1Gbps</item>
    </string-array>

    <string-array name="item_hotspot_name">
        <item>Wownet hotspot 1</item>
        <item>Wownet hotspot 2</item>
        <item>Wownet hotspot 3</item>
        <item>Wownet hotspot 4</item>
    </string-array>

</resources>